--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: Ranade-Regular;
+  src: url(/fonts/Ranade-Regular.otf);
+}
+
+@font-face {
+  font-family: Treasure;
+  src: url(/fonts/FantaisieArtistique.otf);
+}
+
 #player {
     position: absolute;
     background-color: transparent;
@@ -55,13 +65,14 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0.4);
   padding: 20px;
   border-radius: 10px;
-  color: white;
+  color: #391f0f;
   min-width: 300px;
   z-index: 1000;
 }
+
 .popup-button {
   display: inline-block;
   margin-top: 15px;
@@ -74,21 +85,51 @@ body {
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease;
+  position: absolute;
+  top: 630px;
 }
 .popup.active {
   display: block;
 }
 
 .popup-content {
+  background: url("Quest.png") no-repeat center center;
+  background-size: contain; /* Ensures the image fits inside */
+  width: 1100px; /* Adjust to match Quest.png dimensions */
+  height: 700px; /* Adjust to match Quest.png dimensions */
   position: relative;
+  padding: 20px; /* Space for content inside */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.popup h2 {
+  margin-bottom: 10px;
+  font-family: 'Treasure';
+  font-size: 70px;
+  width: 500px;
+}
+
+.popup p {
+  font-family: fantasy;
+  width: 470px;
+  font-size: 20px;
+}
+
+.popup img{
+  width: 200px;
 }
 
 .close-btn {
   position: absolute;
   right: 10px;
   top: 5px;
-  font-size: 24px;
+  font-size: 46px;
   cursor: pointer;
+  color: white;
 }
 
 .close-btn:hover {
